2005-05-23  Derek Price  <derek@ximbiot.com>

	* sanity.sh (rcslib-symlink-10): Accept empty result due to broken glob
	in glibc 2.3.5.

2005-05-18  Derek Price  <derek@ximbiot.com>

	* sanity.sh (config-9): Split to local/remote tests to avoid unportable
	expr characters.

2005-05-17  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Use a predictable umask.

2005-05-13  Derek Price  <derek@ximbiot.com>

	* login.c (password_entry_parseline): Placate gcc -Wall.

2005-05-11  Derek Price  <derek@ximbiot.com>

	* cvs.h (find_files): New proto.
	* find_names.c (find_files, strip_rcsext): New functions.
	(find_rcs): Make arg const.  Use new find_files.  Improve header
	comment block.
	* history.c (histfile): Remove global.
	(get_history_log_name): New function.
	(history, history_write): Use new functions.
	(read_hrecs_file): New function containing most content from...
	(read_hrecs): ...this function, which now accepts a file list and calls
	read_hrecs_file once for each file.
	* parseinfo.c (parse_config): Parse HistoryLogPath & HistorySearchPath.
	* parseinfo.h (struct config): Add HistoryLogPath & HistorySearchPath.
	* sanity.sh (basic2-64): Remove obsolete comment.
	(config): Test new history options.
	(crerepos): Cleanup.

2005-05-09  Derek Price  <derek@ximbiot.com>

	* error.c (error): Avoid unportable calls to vsyslog.

2005-05-09  Derek Price  <derek@ximbiot.com>

	* history.c (history_write): Add FIXME.

2005-05-09  Derek Price  <derek@ximbiot.com>

	* hash.c (removenode, mergelists): New function.
	(delnode): Use removenode.
	* hash.h (mergelists): New proto.

2005-05-04  Derek Price  <derek@ximbiot.com>

	* error.c (error): Avoid recursion and syslog the problem.

2005-05-03  Derek Price  <derek@ximbiot.com>

	* tag.c (is_in_val_tags): Remove unnecessary existance checking for the
	val-tags file and just rely on open() to create it when necessary.

2005-05-03  Derek Price  <derek@ximbiot.com>
